<resources>
    <string name="app_name">Notify Me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_my_smart_device">MySmartDeviceActivity</string>
    <string name="title_myevents">My Events</string>
    <string name="title_mysmartdevices">My Smart Devices</string>
    <string name="title_menuhome">Home</string>
    <string name="title_menumyevents">My events</string>
    <string name="title_menumysmartdevices">My smart devices</string>
    <string name="title_menuaddsmartdevice">Add smart device</string>
    <string name="title_menusettings">Settings</string>
    <string name="title_menuaboutus">About us</string>
    <string name="title_menucontactus">Contact us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">My Events</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="tab_text_3">My Smart Devices</string>
    <string name="connecting">Connecting ...</string>
    <string name="search_progress">Searching ...</string>
    <string name="button_ok">OK</string>
    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="setTimePicker">Choose time</string>
    <string name="anullerTimePicker">Cancel</string>
    <string name="chooseTimePickerTime">Choose</string>

    <string name="channel_name">Notificationchannel</string>
    <string name="title_activity_add_nest_smart_device">AddNestSmartDevice</string>

    <string name="edit_event">Edit Event</string>
    <string name="write_event_name">Event Name:</string>
    <string name="give_event_name">Give your event a name</string>
    <string name="event_pick_day">At Day:</string>
    <string name="event_pick_when">When:</string>
    <string name="event_pick_triggers">Do this:</string>
    <string name="select_trigger">Add Event trigger</string>
    <string name="event_initial_time">Time:</string>
    <string name="event_between_time">Between time:</string>
    <string name="event_create">Create Event</string>
    <string name="event_update">Update Event</string>

    <string name="daypicker_monday">M</string>
    <string name="daypicker_tuesday">T</string>
    <string name="daypicker_wednesday">W</string>
    <string name="daypicker_thursday">T</string>
    <string name="daypicker_friday">F</string>
    <string name="daypicker_saturday">S</string>
    <string name="daypicker_sunday">S</string>

    <string name="image_holder">Normal image holder</string>

    <string name="location_picker_select_from_map">Select freely from map</string>
    <string name="location_picker_create_new_location">Create new predefinedLocation</string>
    <string name="location_picker_select_location">Please select a predefined location:</string>
</resources>
