<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="p8project.sw801.ui.Settings.AddGlobalMuteSetting.Dialog.TimePickerViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="65dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/setTimePicker" />

                <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hour="@{viewModel.currentHour()}"
                    android:minute="@{viewModel.currentMinute()}"
                    android:onTimeChanged="@{viewModel::setTime}"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{() -> viewModel.onLaterClick()}"
                    android:text="@string/anullerTimePicker" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> viewModel.onSubmitClick()}"
                    android:text="@string/chooseTimePickerTime" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</layout>