<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="p8project.sw801.ui.event.editevent.EditEvent">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="p8project.sw801.ui.event.editevent.EditEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/event_activity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textViewEditEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_event"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textViewEditEvent">

                <TextView
                    android:id="@+id/textViewEventName"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/write_event_name" />

                <EditText
                    android:id="@+id/textInputEventName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"

                    android:hint="@string/give_event_name"
                    android:inputType="text"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEventName" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventDayPickerWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventNameWrapper">

                <TextView
                    android:id="@+id/textViewAtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_pick_day" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewAtDay">

                    <include
                        android:id="@+id/daypicker"
                        layout="@layout/daypicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventWhensWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDayPickerWrapper">

                <TextView
                    android:id="@+id/textViewWhen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_pick_when"
                    app:layout_constraintStart_toStartOf="parent" />

                <Spinner
                    android:id="@+id/spinnerLocation"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:entries="@{viewModel.locationConditions}"
                    android:fadingEdge="vertical"
                    android:selectedItemPosition="@={viewModel.locationCondition}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWhen" />

                <TextView
                    android:id="@+id/addLocation"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/spinner_border"
                    android:drawableEnd="@android:drawable/ic_menu_mapmode"
                    android:gravity="center_vertical"
                    android:visibility="@{viewModel.locationCondition.get()!=0 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerLocation" />

                <Spinner
                    android:id="@+id/spinnerWhen"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:entries="@{viewModel.whenConditions}"
                    android:fadingEdge="vertical"
                    android:selectedItemPosition="@={viewModel.whenCondition}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addLocation" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventSelectTriggers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventWhensWrapper">

                <TextView
                    android:id="@+id/textViewDoThis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_pick_triggers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/addEventTriggerStatic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/spinner_border"
                    android:drawableEnd="@drawable/ic_add_black_18dp"
                    android:gravity="center_vertical"
                    android:text="@string/select_trigger"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDoThis" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/eventSaveWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventSelectTriggers">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonCreateEvent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/buttonCreateEvent"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> viewModel.tester()}"
                    android:text="Create Event"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonCancel"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>